# Sagacious

./: .gitignore  Cargo.toml  README.md
src/: config.rs  documentation.rs  main.rs
templates/: break-prompt.txt  memory-gated-sifting-prompt.txt  readme-prompt.txt
