[package]
name = "sagacious"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-openai = "0.5.0"
boilerplate = "0.2.5"
clap = { version = "4.1.3", features = ["derive", "unicode"] }
env_logger = "0.10.0"
indicatif = "0.17.3"

log = "0.4.17"
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.2", features = ["full"] }
toml = "0.6.0"
walkdir = "2.3.2"

